--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "@date-io/core": "1.3.13",
         "@date-io/date-fns": "1.3.13",
         "@material-ui/core": "4.12.3",
+        "@material-ui/icons": "^4.11.3",
+        "@material-ui/lab": "^4.0.0-alpha.61",
         "@material-ui/pickers": "3.3.10",
         "@reduxjs/toolkit": "1.6.1",
         "auth0-lock": "11.30.4",
